changement dans le .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -258,6 +258,8 @@ paket-files/
 
 # ________________
 *.web.config
+*.LoginBD.txt
+*.serveurIIS.txt
 
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
