--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="BDPlanCadre" connectionString="Server=!!!SERVEUR LOCAL ICI!!!;Database=BDPlanCadre;Trusted_Connection=Yes;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
-    <add name="BDPlanCadre" connectionString="data source=deptinfo420;initial catalog=BDPlanCadreDEV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="BDPlanCadre" connectionString="data source=deptinfo420;initial catalog=BDPlanCadreDEV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="BDPlanCadre" connectionString="data source=deptinfo420;initial catalog=BDPlanCadreTEST;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
