--- a/.gitignore
+++ b/.gitignore
@@ -261,6 +261,7 @@ paket-files/
 *LoginBD.txt
 *DossierIIS.txt
 *RunProd.bat
+*RunLocal.bat
 *RunTest.bat
 
 # Python Tools for Visual Studio (PTVS)
