--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="BDPlanCadre" connectionString="Server=!!!SERVEUR LOCAL ICI!!!;Database=BDPlanCadre;Trusted_Connection=Yes;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
-    <add name="BDPlanCadre" connectionString="data source=deptinfo420;initial catalog=BDPlanCadreDEV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BDPlanCadre" connectionString="data source=DEPTINFO420;initial catalog=BDPlanCadreTEST;persist security info=True;user id=P2017-Equipe1;password=Carotte23;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="BDPlanCadre" connectionString="data source=INFO-324-1A-130\CARLSQL;initial catalog=BDPlanCadre;persist security info=True;user id=Sa;password=SACarl;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
