--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccueilController.cs" />
     <Compile Include="Controllers\ConsoleController.cs" />
+    <Compile Include="Controllers\ConsoleProgrammeController.cs" />
     <Compile Include="Controllers\EnonceCompetencesController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -264,7 +265,6 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\listeProgramme.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\portail.js" />
     <Content Include="Scripts\respond.js" />
@@ -304,13 +304,12 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Accueil\Index.cshtml" />
     <Content Include="Views\Stage\indexStage.cshtml" />
-    <Content Include="Views\Console\indexConsole.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
     <Content Include="Views\Programme\Index.cshtml" />
     <Content Include="Views\Programme\TreeView.cshtml" />
-    <Content Include="Views\Programme\Edit.cshtml" />
-    <Content Include="Views\Programme\Create.cshtml" />
-    <Content Include="Views\Programme\_PartialList.cshtml" />
+    <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
+    <Content Include="Views\ConsoleProgramme\Create.cshtml" />
+    <Content Include="Views\ConsoleProgramme\_PartialList.cshtml" />
     <Content Include="Views\Shared\_ConsoleNav.cshtml" />
   </ItemGroup>
   <ItemGroup>
