--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="BDPlanCadre" connectionString="data source=DEPTINFO420;initial catalog=BDPlanCadreTEST;persist security info=True;user id=P2017-Equipe1;password=Carotte23;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="BDPlanCadre" connectionString="data source=DEPTINFO420;initial catalog=BDPlanCadre;persist security info=True;user id=P2017-Equipe1;password=Carotte23;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <!--<add name="BDPlanCadre" connectionString="data source=INFO-324-1A-130\CARLSQL;initial catalog=BDPlanCadre;persist security info=True;user id=Sa;password=SACarl;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <!--<add name="BDPlanCadre" connectionString="data source=DEPTINFO420;initial catalog=BDPlanCadre;persist security info=True;user id=P2017-Equipe1;password=Carotte23;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="BDPlanCadre" connectionString="data source=INFO-324-1A-130\CARLSQL;initial catalog=BDPlanCadre;persist security info=True;user id=Sa;password=SACarl;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
