--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccueilController.cs" />
     <Compile Include="Controllers\ConsoleProgrammeController.cs" />
+    <Compile Include="Controllers\ContexteRealisationsController.cs" />
     <Compile Include="Controllers\EnonceCompetencesController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -312,13 +313,15 @@
     <Content Include="Views\Programme\Details.cshtml" />
     <Content Include="Views\Programme\Edit.cshtml" />
     <Content Include="Views\Programme\_PartialEnonceCompetence.cshtml" />
-    <Content Include="Views\EnonceCompetences\CreateCompetence.cshtml" />
+    <Content Include="Views\EnonceCompetences\Create.cshtml" />
     <Content Include="Views\EnonceCompetences\_partialContexte.cshtml" />
     <Content Include="Views\EnonceCompetences\_partialCreateContexte.cshtml" />
     <Content Include="Views\Accueil\Index.cshtml" />
+    <Content Include="Views\EnonceCompetences\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ContexteRealisations\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
