--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/packages.config
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/packages.config
@@ -28,6 +28,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.fr" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
@@ -51,5 +52,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net452" />
+  <package id="Rotativa.Core" version="2.0.0" targetFramework="net452" />
+  <package id="Rotativa.MVC" version="2.0.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
