--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -193,14 +193,14 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccueilController.cs" />
-    <Compile Include="Controllers\ConsoleProgrammeController.cs" />
+    <Compile Include="Controllers\ConsoleDevisController.cs" />
     <Compile Include="Controllers\ContexteRealisationController.cs" />
     <Compile Include="Controllers\CriterePerformanceController.cs" />
     <Compile Include="Controllers\ElementCompetenceController.cs" />
     <Compile Include="Controllers\EnonceCompetenceController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\ProgrammeController.cs" />
+    <Compile Include="Controllers\DevisMinistereController.cs" />
     <Compile Include="Controllers\StageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -209,13 +209,20 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BDPlanCadre.cs" />
     <Compile Include="Models\ContexteRealisation.cs" />
+    <Compile Include="Models\Cours.cs" />
     <Compile Include="Models\CriterePerformance.cs" />
+    <Compile Include="Models\DevisMinistere.cs" />
     <Compile Include="Models\ElementCompetence.cs" />
     <Compile Include="Models\EnonceCompetence.cs" />
     <Compile Include="Models\EnteteProgramme.cs" />
+    <Compile Include="Models\GrilleCours.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PlanCadre.cs" />
+    <Compile Include="Models\PlanCadreElement.cs" />
+    <Compile Include="Models\PlanCadreEnonce.cs" />
     <Compile Include="Models\Programme.cs" />
+    <Compile Include="Models\Session.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -310,18 +317,18 @@
     <Content Include="Views\Accueil\Index.cshtml" />
     <Content Include="Views\Stage\indexStage.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
-    <Content Include="Views\Programme\Index.cshtml" />
+    <Content Include="Views\DevisMinisteriel\Index.cshtml" />
     <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
     <Content Include="Views\ConsoleProgramme\Create.cshtml" />
     <Content Include="Views\ConsoleProgramme\_PartialList.cshtml" />
     <Content Include="Views\Shared\_ConsoleNav.cshtml" />
-    <Content Include="Views\Programme\Details.cshtml" />
-    <Content Include="Views\Programme\Edit.cshtml" />
-    <Content Include="Views\Programme\_PartialEnonceCompetence.cshtml" />
-    <Content Include="Views\Programme\_TreeView.cshtml" />
+    <Content Include="Views\DevisMinisteriel\Details.cshtml" />
+    <Content Include="Views\DevisMinisteriel\Edit.cshtml" />
+    <Content Include="Views\DevisMinisteriel\_PartialEnonceCompetence.cshtml" />
+    <Content Include="Views\DevisMinisteriel\_TreeView.cshtml" />
     <Content Include="Views\EnonceCompetence\Info.cshtml" />
     <Content Include="Views\ElementCompetence\Info.cshtml" />
-    <Content Include="Views\Programme\Info.cshtml" />
+    <Content Include="Views\DevisMinisteriel\Info.cshtml" />
     <Content Include="Views\Accueil\Pedagogie.cshtml" />
     <Content Include="Views\EnonceCompetence\Create.cshtml" />
     <Content Include="Views\ContexteRealisation\Create.cshtml" />
