--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -317,18 +317,18 @@
     <Content Include="Views\Accueil\Index.cshtml" />
     <Content Include="Views\Stage\indexStage.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
-    <Content Include="Views\DevisMinisteriel\Index.cshtml" />
+    <Content Include="Views\DevisMinistere\Index.cshtml" />
     <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
     <Content Include="Views\ConsoleProgramme\Create.cshtml" />
     <Content Include="Views\ConsoleProgramme\_PartialList.cshtml" />
     <Content Include="Views\Shared\_ConsoleNav.cshtml" />
-    <Content Include="Views\DevisMinisteriel\Details.cshtml" />
-    <Content Include="Views\DevisMinisteriel\Edit.cshtml" />
-    <Content Include="Views\DevisMinisteriel\_PartialEnonceCompetence.cshtml" />
-    <Content Include="Views\DevisMinisteriel\_TreeView.cshtml" />
+    <Content Include="Views\DevisMinistere\Details.cshtml" />
+    <Content Include="Views\DevisMinistere\Edit.cshtml" />
+    <Content Include="Views\DevisMinistere\_PartialEnonceCompetence.cshtml" />
+    <Content Include="Views\DevisMinistere\_TreeView.cshtml" />
     <Content Include="Views\EnonceCompetence\Info.cshtml" />
     <Content Include="Views\ElementCompetence\Info.cshtml" />
-    <Content Include="Views\DevisMinisteriel\Info.cshtml" />
+    <Content Include="Views\DevisMinistere\Info.cshtml" />
     <Content Include="Views\Accueil\Pedagogie.cshtml" />
     <Content Include="Views\EnonceCompetence\Create.cshtml" />
     <Content Include="Views\ContexteRealisation\Create.cshtml" />
