--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -356,6 +356,8 @@
     <Content Include="Views\PlanCadre\PlanCadreDetail1.cshtml" />
     <Content Include="Views\InstanceProgrammePC\Index.cshtml" />
     <Content Include="Views\PlanCadre\CompetencePC.cshtml" />
+    <Content Include="Views\PlanCadre\IndexFabrice.cshtml" />
+    <Content Include="Views\PlanCadre\PlanCadreDetailFabrice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
