--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -353,7 +353,7 @@
     <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
     <Content Include="Views\PlanCadre\Index.cshtml" />
     <Content Include="Views\PlanCadre\_TreeView.cshtml" />
-    <Content Include="Views\PlanCadre\PlanCadreDetail1.cshtml" />
+    <Content Include="Views\PlanCadre\PlanCadreDetail.cshtml" />
     <Content Include="Views\InstanceProgrammePC\Index.cshtml" />
     <Content Include="Views\PlanCadre\CompetencePC.cshtml" />
     <Content Include="Views\PlanCadre\IndexFabrice.cshtml" />
