correction du code.

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -199,11 +199,11 @@
     <Compile Include="Controllers\ElementCompetenceController.cs" />
     <Compile Include="Controllers\EnonceCompetenceController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
-    <Compile Include="Controllers\InstanceProgrammePCController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\DevisMinistereController.cs" />
     <Compile Include="Controllers\PlanCadreController.cs" />
     <Compile Include="Controllers\PlanCadreEnonceController.cs" />
+    <Compile Include="Controllers\ProgrammeController.cs" />
     <Compile Include="Controllers\StageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -351,14 +351,13 @@
     <Content Include="Views\ConsoleProgramme\_PartialList.cshtml" />
     <Content Include="Views\ConsoleProgramme\Create.cshtml" />
     <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
-    <Content Include="Views\PlanCadre\IndexFabrice.cshtml" />
     <Content Include="Views\PlanCadre\_TreeView.cshtml" />
-    <Content Include="Views\PlanCadre\PlanCadreDetailFabrice.cshtml" />
     <Content Include="Views\PlanCadre\PlanCadreDetail.cshtml" />
-    <Content Include="Views\InstanceProgrammePC\Index.cshtml" />
+    <Content Include="Views\Programme\Index.cshtml" />
     <Content Include="Views\PlanCadre\CompetencePC.cshtml" />
-    <Content Include="Views\PlanCadre\IndexFabrice.cshtml" />
-    <Content Include="Views\PlanCadre\PlanCadreDetailFabrice.cshtml" />
+    <Content Include="Views\PlanCadre\Index.cshtml" />
+    <Content Include="Views\PlanCadre\Create.cshtml" />
+    <Content Include="Views\Programme\PlanCadre.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
