Work in progress(4carlichou)

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -351,13 +351,13 @@
     <Content Include="Views\ConsoleProgramme\_PartialList.cshtml" />
     <Content Include="Views\ConsoleProgramme\Create.cshtml" />
     <Content Include="Views\ConsoleProgramme\Edit.cshtml" />
-    <Content Include="Views\PlanCadre\_TreeView.cshtml" />
+    <Content Include="Views\Programme\_TreeView.cshtml" />
     <Content Include="Views\PlanCadre\PlanCadreDetail.cshtml" />
     <Content Include="Views\Programme\Index.cshtml" />
     <Content Include="Views\PlanCadre\CompetencePC.cshtml" />
     <Content Include="Views\PlanCadre\Index.cshtml" />
     <Content Include="Views\PlanCadre\Create.cshtml" />
-    <Content Include="Views\Programme\PlanCadre.cshtml" />
+    <Content Include="Views\Programme\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
